<resources>
    <string name="app_name">景典游</string>
    <string name="tab_home">首页</string>
    <string name="tab_strategy">攻略</string>
    <string name="tab_scenic">景点</string>
    <string name="tab_rendezvous">约游</string>
    <string name="tab_person">我的</string>
    <string name="String_recommend">小景推荐</string>
    <string name="String_rendezvous">约游</string>
    <string name="String_on_way">在路上</string>
    <string name="String_hot">超值推荐</string>
    <string name="String_jinnang">锦囊</string>
    <string name="up">起</string>
    <string name="marketprice">¥65</string>
    <string name="sanming">三明</string>
    <string name="fanquan">返券¥30</string>
    <string name="jiulong">九龙潭</string>
    <string name="chooseplace">目的地选择</string>
    <string name="string_search">搜索目的地</string>
    <string name="string_rendezvous">约游吧</string>
    <string name="string_person">我的</string>
    <string name="string_login_one">您还没有登录哦</string>
    <string name="string_login">点击登录</string>
    <string name="string_base_msg">基本信息</string>
    <string name="string_my_order">我的订单</string>
    <string name="string_my_suc">我的成就</string>
    <string name="string_my_coupon">我现金券</string>
    <string name="string_my_collect">我的收藏</string>
    <string name="string_person_login">用户登录</string>
    <string name="string_person_register">注册</string>
    <string name="string_destination">目的地</string>
    <string name="string_date">时间</string>
    <string name="string_detail">详情</string>
    <string name="string_rendezvous_you">约你</string>
    <string name="string_yueta">约她</string>
    <string name="string_onway">在路上</string>
    <string name="string_tocao">吐槽</string>
    <string name="string_nearby">身边</string>
    <string name="string_chat">找人聊聊</string>
    <string name="string_yue_ta01">约她</string>
    <string name="string_yue_nv">约他</string>
    <string name="string_tucao">吐槽</string>
    <string name="string_topic">主题</string>
    <string name="string_sign_up">报名:</string>
    <string name="string_comment">人家还没有评价，求你快评价···</string>
    <string name="string_ping">评价</string>
    <string name="string_sixin">私信</string>
    <string name="string_about">关于我们</string>
    <string name="string_version">版本号：V3.5</string>
    <string name="string_android">(Android版)</string>
    <string name="string_updata">检测更新</string>
    <string name="string_feedback">意见反馈</string>
    <string name="string_help">帮助中心</string>
    <string name="string_company_introduce">公司介绍</string>
    <string name="string_welcome">欢迎页面</string>


    <integer name="app_version_code">2</integer>

    <string name="app_version">2.0.0</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_msg">用手机号码登录</string>
    <string name="login_with_weixin">用微信登录</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>

    <string name="tpl_ok">确定</string>
    <string name="tpl_cancel">取消</string>

    <string name="tpl_key_user_icon">头像</string>
    <string name="tpl_key_user_name">昵称</string>
    <string name="tpl_key_user_gender">性别</string>
    <string name="tpl_key_user_note">备注</string>

    <string name="tpl_value_user_name">昵称</string>
    <string name="tpl_value_user_gender">性别</string>
    <string name="tpl_value_user_note">请填写备注信息</string>

    <string name="tpl_sign_user_info">用户信息</string>
    <string name="tpl_sign_up">注册</string>
    <string name="tpl_girl">女</string>
    <string name="tpl_boy">男</string>

    <string name="tpl_camera">拍照</string>
    <string name="tpl_picture">从相册获取</string>

    <string name="tpl_change_user_name_title">更改名字</string>
    <string name="tpl_change_user_note_title">更改备注</string>
    <string name="tpl_input_user_name_hint">好名字可以让你的朋友更容易记住你</string>
    <string name="tpl_input_user_note_hint">自定义备注信息，给你带来更多吸引</string>

    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="tpl_msg_login_hint">请输入手机号码</string>
    <string name="tpl_verify_code_hint">请输验证码</string>
    <string name="tpl_get_verify_code">获取验证码</string>
    <string name="tpl_send_verify_code">检验验证码</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_failed">注册失败</string>
    <string name="string_person_introduce">个人资料</string>
    <string name="string_touxiang">头像</string>
    <string name="string_necheng">呢称</string>
    <string name="string_sex">性别</string>
    <string name="string_birthday">生日</string>
    <string name="string_xingzuo">星座</string>
    <string name="string_phone_number">手机号码</string>
    <string name="string_person_signal">个人标签</string>
    <string name="string_word">个性签名</string>
    <string name="string_lvke">常用旅客</string>
    <string name="string_jump">跳过</string>
    <string name="string_coolect">我的收藏</string>
    <string name="exit_text_tip">再按一次退出</string>
    <string name="title_scenic">景点</string>
    <string name="title_strategy">攻略</string>
    <string name="title_arrange_travel">约游</string>
</resources>
