<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fg_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <include layout="@layout/under_line"/>

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f7f7f7"
        android:orientation="horizontal"
        android:padding="@dimen/d_5">

        <RadioButton
            android:id="@+id/rb_main_home"
            style="@style/MainTabStyle"
            android:checked="true"
            android:drawableTop="@drawable/rb_main_tab_home"
            android:text="@string/tab_home"/>

        <RadioButton
            android:id="@+id/rb_main_strategy"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/rb_main_tab_strategy"
            android:text="@string/tab_strategy"/>

        <RadioButton
            android:id="@+id/rb_main_scenic"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/rb_main_tab_scenic"
            android:text="@string/tab_scenic"/>

        <RadioButton
            android:id="@+id/rb_main_rendezvous"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/rb_main_tab_rendezvous"
            android:text="@string/tab_rendezvous"/>

        <RadioButton
            android:id="@+id/rb_main_person"
            style="@style/MainTabStyle"
            android:drawableTop="@drawable/rb_main_tab_person"
            android:text="@string/tab_person"/>
    </RadioGroup>
</LinearLayout>
