<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/activity_about_we_head"/>

    <ImageView
        android:layout_width="@dimen/d_100"
        android:layout_height="@dimen/d_100"
        android:background="@mipmap/aboutlogo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_20"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_version"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_android"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d_2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d_10"
        android:background="@drawable/about"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_marginRight="@dimen/d_20"
        android:layout_marginTop="@dimen/d_5"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_updata"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/d_20"
                />

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/arrow2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_20"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前已是最新版本"
                android:layout_toLeftOf="@id/back_image"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_5"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1"
            android:background="@color/gray"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_10"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_feedback"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/d_20"
                android:layout_centerVertical="true"
                />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/arrow2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_20"
                />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/d_10"
        android:background="@drawable/about"
        android:layout_marginLeft="@dimen/d_20"
        android:layout_marginRight="@dimen/d_20"
        android:layout_marginTop="@dimen/d_20"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_10"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_help"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/d_20"
                />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/arrow2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_20"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1"
            android:background="@color/gray"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_10"
            android:onClick="companyIntroduce"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_company_introduce"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/d_20"
                android:layout_centerVertical="true"
                />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/arrow2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_20"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_1"
            android:background="@color/gray"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_10"
            android:onClick="onWelcome"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_welcome"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/d_20"
                android:layout_centerVertical="true"
                />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/arrow2"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/d_20"
                />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>