<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/qian"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/person_header"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:background="@mipmap/my_top_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_150">
                <TextView
                    android:layout_above="@+id/ll_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/d_10"
                    android:text="@string/string_login_one"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:id="@+id/ll_login"
                    android:padding="@dimen/d_5"
                    android:background="@drawable/login_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="@string/string_login"/>
                    <View
                        android:layout_width="80dp"
                        android:layout_height="1dp"
                        android:background="@color/black"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_base_msg"
                android:layout_marginTop="@dimen/d_20"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_base_msg"
                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_my_spool"
                android:layout_marginTop="@dimen/d_20"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的足迹"
                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
            <include layout="@layout/under_login_line"/>
            <RelativeLayout
                android:id="@+id/rl_my_achievement"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_my_suc"
                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_my_collect"
                android:layout_marginTop="@dimen/d_10"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_my_collect"
                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
            <include layout="@layout/under_login_line"/>
            <RelativeLayout
                android:id="@+id/rl_my_order"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_my_order"
                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_my_coupon"
                android:layout_marginTop="@dimen/d_10"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_my_coupon"
                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_about_us"
                android:layout_marginTop="@dimen/d_20"
                android:background="@color/white"
                android:padding="@dimen/d_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_55">
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="关于我们"

                    />
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/item_nomal"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>