<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:padding="@dimen/d_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.pqc.jingdianyou.view.RoundImageView
            android:id="@+id/img_scenic"
            android:layout_width="@dimen/d_100"
            android:layout_height="@dimen/d_80"
            android:scaleType="fitXY"
            android:src="@mipmap/empty_photo"
            />
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/d_5">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/d_5">
                    <TextView
                        android:id="@+id/tv_scenic_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/d_18"
                        android:textStyle="bold"
                        android:text="@string/jiulong"
                        />
                    <LinearLayout
                        android:layout_marginTop="@dimen/d_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/img_scenic_level1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/scores_a"/>
                        <ImageView
                            android:id="@+id/img_scenic_level2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/scores_a"/>
                        <ImageView
                            android:id="@+id/img_scenic_level3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/scores_a"/>
                        <ImageView
                            android:id="@+id/img_scenic_level4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/scores_a"/>
                        <ImageView
                            android:id="@+id/img_scenic_level5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/scores_a"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_give_integral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fanquan"
                        android:textColor="#f13228"
                        android:background="@mipmap/fanquan_bg"
                        android:layout_marginTop="@dimen/d_10"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_city_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sanming"
                        android:textSize="@dimen/d_16"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF4500"
                            android:textSize="@dimen/d_18"
                            android:text="¥"/>
                        <TextView
                            android:id="@+id/tv_sales_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF4500"
                            android:textSize="@dimen/d_18"
                            android:text="48"/>
                        <TextView
                            android:layout_marginLeft="@dimen/d_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/up"
                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_market_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marketprice"
                        android:background="@mipmap/line"
                        android:textSize="@dimen/d_18"/>
                </LinearLayout>
            </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_marginLeft="110dp"
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:background="@color/gray"/>
</LinearLayout>